--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.3",
+		"sveltekit-superforms": "^0.8.6",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"appwrite": "^11.0.0"
+		"@types/set-cookie-parser": "^2.4.2",
+		"appwrite": "^11.0.0",
+		"set-cookie-parser": "^2.6.0"
 	}
 }
