--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
+		"clsx": "^1.2.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -31,6 +32,7 @@
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.3",
 		"sveltekit-superforms": "^0.8.6",
+		"tailwind-merge": "^1.12.0",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -42,6 +44,7 @@
 	"dependencies": {
 		"@types/set-cookie-parser": "^2.4.2",
 		"appwrite": "^11.0.0",
+		"radix-svelte": "^0.5.0",
 		"set-cookie-parser": "^2.6.0"
 	}
 }
